# vision-tracking

./: readme.md
custom_tf_broadcaster/: package.xml  setup.cfg  setup.py
custom_tf_broadcaster/custom_tf_broadcaster/: custom_tf_broadcaster.py
nav_ontologies/: mpk.owl  package.xml  setup.cfg  setup.py  usv_navigation_ontology.owl
nav_ontologies/nav_ontologies/: owl_knowledge_client.py  owl_knowledge_server.py  owl_reasoner.py
nav_ontologies/owl_knowledge/: usv.owl
navigation/: package.xml  setup.py
navigation/navigation/: navigator.py  subscriber_member_function.py
owl_knowledge_interface/: CMakeLists.txt  package.xml
owl_knowledge_interface/srv/: GetOWLKnowledge.srv
pytracking_image/: Checking_Video.py  tracker_node.py
pytracking_image/evaluation/: data.py  running.py  tracker.py
pytracking_image/ltr/: run_training.py
pytracking_image/networks/: dimp18.pth  tamos_resnet50.pth.tar  tomp50.pth.tar
pytracking_image/notebooks/: analyze_results.ipynb
pytracking_image/pytracking/: run_tracker.py
usv_control/: package.xml  setup.py
usv_control/usv_control/: lqr.py  pid.py  position_control.py  smc.py  twist_publisher.py  usv_pid_control.py  yaw_controller.py
usv_description/: CMakeLists.txt  package.xml
usv_description/config/: ekf.yaml  nav2_params.yaml  nav2_params_online.yaml
usv_description/launch/: launch_env_controller.launch.py  usv.launch.py  usv.state_publisher.launch.py
usv_description/maps/: coast_map.pgm  coast_map.yaml  simple_map.yaml
usv_description/meshes/: USV.dae  motor.dae  propeller.dae
(+94 files in other folders)
